--- a/.github/workflows/publish_blog_action.yml
+++ b/.github/workflows/publish_blog_action.yml
@@ -33,14 +33,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Install PNPM
         run: npm i -g pnpm
-      - name: Detect package manager
-        id: detect-package-manager
-        run: pnpm install
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -59,9 +57,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuxt-build-
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: pnpm install
       - name: Static HTML export with Nuxt
-        run: ${{ steps.detect-package-manager.outputs.manager }} run generate
+        run: pnpm run generate
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
