--- a/.github/workflows/publish_blog_action.yml
+++ b/.github/workflows/publish_blog_action.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install PNPM
-        run: npm i -g pnpm
+        run: npm i -g pnpm@10.26.1
 
       - name: Setup Node
         uses: actions/setup-node@v4
